# iris-cli

./: README.md  action.yml  pyproject.toml
iris_cli/: action_plan.py  assess.py  audit_log.py  cedar_parser.py  certify.py  compiler_config.py  compliance_check_cmd.py  compliance_fix.py  compliance_scan_cmd.py  cost.py  declare.py  delegation.py  discover.py  dlp_cmd.py  drift.py  enforce.py  entitlements_cmd.py  evidence.py  explain.py  framework_suggest.py  framework_test.py  hitl.py  license_cmd.py  list_cmd.py  main.py  mcp_server.py  models_cmd.py  onboarding_report.py  org_policy.py  policy_cache.py  policy_commit.py  policy_diff.py  policy_status.py  preview.py  quickstart.py  redteam.py  regulatory.py  scan_govern.py  scan_report.py  scm.py  (+6 more)
tests/: test_audit_log.py  test_cli_free_tier_boundary.py  test_compliance_scan_fail_on.py  test_docs_pages_check.py  test_entitlements_display.py  test_evidence.py  test_evidence_export.py  test_evidence_query.py  test_framework_suggest.py  test_framework_test.py  test_hitl_cli.py  test_list_cmd.py  test_mcp_model_governance.py  test_policy_diff.py  test_quickstart.py  test_vocabulary.py  vault_fixtures.py
